<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Spinner
        android:id="@+id/style"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/style_array"
        android:layout_margin="10dp"
        android:layout_marginTop="30dp"
        android:prompt="@string/style_name" />

    <Spinner
        android:id="@+id/type"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="30dp"
        android:prompt="@string/type_name" />

    <Spinner
        android:id="@+id/size"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="30dp"
        android:prompt="@string/size_name" />

    <Button
        android:id="@+id/setfonts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:text="@string/setfonts_name" />

</LinearLayout>